[package]
name = "pest_fmt"
version = "0.1.3"
authors = ["192608617@qq.com"]
edition = "2018"
description = "..."
repository = "https://github.com/pest-parser/pest-fmt"
license = "MPL-2.0"

[dependencies]
pest = "2.1"
text-utils = "0.2"
walkdir = "2.3"
toml = "0.5"

[dev-dependencies]
pest_generator = "2.1"
quote = "1.0"
