[package]
authors = ["Aster <192608617@qq.com>"]
description = "A formatter tool for pest"
edition = "2018"
license = "MPL-2.0"
name = "pest_fmt"
repository = "https://github.com/pest-parser/pest-fmt"
version = "0.1.4"

[dependencies]
pest = "2.5"
pest_derive = "2.5"
text-utils = "0.2"
toml = "0.5"
walkdir = "2.3"

[dev-dependencies]
indoc = "2"
pretty_assertions = "1.3.0"
quote = "1.0"

[[bin]]
name = "pestfmt"
path = "src/main.rs"
